k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vohliloe
spec:
  rules:
  - host: vohliloe.amesame.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vohliloe
            port:
              number: 8080
